--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
+    "javascript-time-ago": "^2.0.13",
     "method-override": "^3.0.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
