--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cloudinary": "^1.22.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
@@ -20,7 +21,6 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
-    "javascript-time-ago": "^2.0.13",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
